content/0004/mocks/capitais.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: capitais
  name: capitais
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capitais
  template:
    metadata:
      labels:
        app: capitais
    spec:
      containers:
      - image: nginx:1.21.3
        name: nginx
        volumeMounts:
        - name: data
          mountPath: "/etc/nginx/conf.d"
      volumes:
        - name: data
          configMap:
            name: capitais
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: capitais
  name: capitais
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: capitais
