content/0004/mocks/ingress-capitais.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capitais
  annotations:
    konghq.com/plugins: auth
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /capitais
        pathType: Exact
        backend:
          service:
            name: capitais
            port:
              number: 80
