content/0004/mocks/ingress-estados.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estados
  annotations:
    #konghq.com/plugins: auth
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /estados
        pathType: Exact
        backend:
          service:
            name: estados
            port:
              number: 80
